// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Manga page should render correctly should render correctly 1`] = `
<div
  className="MuiContainer-root MuiContainer-maxWidthLg"
>
  <div
    className="MuiPaper-root makeStyles-paper-8 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <h4
      className="MuiTypography-root makeStyles-title-1 MuiTypography-h4"
    >
      Dr. STONE
    </h4>
    <div
      className="makeStyles-details-3"
    >
      <a
        href="https://myanimelist.net/manga/103897"
        rel="noreferrer noopener"
        target="_blank"
      >
        <img
          alt="Dr. STONE"
          className="makeStyles-thumbnail-2"
          src="https://mangadex.org/images/manga/20882.jpg?1585634146"
        />
      </a>
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-between"
      >
        <table
          className="makeStyles-infoTable-5"
        >
          <tbody>
            <tr>
              <td>
                <p
                  className="MuiTypography-root MuiTypography-body1"
                >
                  Latest release:
                </p>
              </td>
              <td>
                <p
                  aria-describedby={null}
                  className="MuiTypography-root makeStyles-detailText-4 MuiTypography-body1"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Sun, 05 Jul 2020 16:00:00 GMT"
                >
                  2020-07-05T16:00:00.000Z
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <p
                  className="MuiTypography-root MuiTypography-body1"
                >
                  Estimated release interval:
                </p>
              </td>
              <td>
                <p
                  className="MuiTypography-root makeStyles-detailText-4 MuiTypography-body1"
                >
                  7 days 0 hours
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <p
                  className="MuiTypography-root MuiTypography-body1"
                >
                  Estimated next release:
                </p>
              </td>
              <td>
                <p
                  className="MuiTypography-root makeStyles-detailText-4 MuiTypography-body1"
                >
                  2020-07-12T16:00:00.000Z
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <p
                  className="MuiTypography-root MuiTypography-body1"
                >
                  Latest chapter:
                </p>
              </td>
              <td>
                <p
                  className="MuiTypography-root makeStyles-detailText-4 MuiTypography-body1"
                >
                  157
                </p>
              </td>
            </tr>
          </tbody>
        </table>
        <nav
          aria-labelledby="nested-list-subheader"
          className="MuiList-root makeStyles-root-11 makeStyles-sourceList-6 MuiList-padding"
        >
          <div
            aria-disabled={false}
            className="MuiButtonBase-root MuiListItem-root makeStyles-mainItem-12 MuiListItem-gutters MuiListItem-button"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="MuiListItemText-root makeStyles-listOpener-14"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
              >
                Manga sources
              </span>
            </div>
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
            <span
              className="MuiTouchRipple-root"
            />
          </div>
        </nav>
      </div>
    </div>
    <div
      className="MuiPaper-root MuiTableContainer-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <table
        aria-label="simple table"
        className="MuiTable-root"
        role={null}
      >
        <thead
          className="MuiTableHead-root"
          role={null}
        >
          <tr
            className="MuiTableRow-root MuiTableRow-head"
            role={null}
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head makeStyles-titleColumn-9"
              scope="col"
            >
              Title
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Chapter
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head makeStyles-releaseColumn-10"
              scope="col"
            >
              Released
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Group
            </th>
          </tr>
        </thead>
        <tbody
          className="MuiTableBody-root"
          role={null}
        >
          <tr
            className="MuiTableRow-root"
            role={null}
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
              role="cell"
              scope="row"
            >
              <a
                className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                href="https://mangaplus.shueisha.co.jp/viewer/1007322"
                onBlur={[Function]}
                onFocus={[Function]}
                style={
                  Object {
                    "textDecoration": "none",
                  }
                }
                target="_blank"
              >
                <span>
                  Z=157: Same Time, Same Place
                </span>
              </a>
            </th>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
            >
              157
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
            >
              2020-07-05T16:00:00.000Z
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
            >
              Shueisha
            </td>
          </tr>
          <tr
            className="MuiTableRow-root"
            role={null}
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
              role="cell"
              scope="row"
            >
              <a
                className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                href="https://mangadex.org/chapter/938629"
                onBlur={[Function]}
                onFocus={[Function]}
                style={
                  Object {
                    "textDecoration": "none",
                  }
                }
                target="_blank"
              >
                <span>
                  Z=156: Two Scientists
                </span>
              </a>
            </th>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
            >
              156
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
            >
              2020-06-26T17:01:59.000Z
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
            >
              MangaPlus
            </td>
          </tr>
          <tr
            className="MuiTableRow-root"
            role={null}
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
              role="cell"
              scope="row"
            >
              <a
                className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                href="https://mangaplus.shueisha.co.jp/viewer/1007024"
                onBlur={[Function]}
                onFocus={[Function]}
                style={
                  Object {
                    "textDecoration": "none",
                  }
                }
                target="_blank"
              >
                <span>
                  Z=156: Two Scientists
                </span>
              </a>
            </th>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
            >
              156
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
            >
              2020-06-26T16:00:00.000Z
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
            >
              Shueisha
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Manga page should render correctly should render correctly when logged in 1`] = `
<div
  className="MuiContainer-root MuiContainer-maxWidthLg"
>
  <div
    className="MuiPaper-root makeStyles-paper-8 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <h4
      className="MuiTypography-root makeStyles-title-1 MuiTypography-h4"
    >
      Dr. STONE
    </h4>
    <div
      className="makeStyles-details-3"
    >
      <a
        href="https://myanimelist.net/manga/103897"
        rel="noreferrer noopener"
        target="_blank"
      >
        <img
          alt="Dr. STONE"
          className="makeStyles-thumbnail-2"
          src="https://mangadex.org/images/manga/20882.jpg?1585634146"
        />
      </a>
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-between"
      >
        <table
          className="makeStyles-infoTable-5"
        >
          <tbody>
            <tr>
              <td>
                <p
                  className="MuiTypography-root MuiTypography-body1"
                >
                  Latest release:
                </p>
              </td>
              <td>
                <p
                  aria-describedby={null}
                  className="MuiTypography-root makeStyles-detailText-4 MuiTypography-body1"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Sun, 05 Jul 2020 16:00:00 GMT"
                >
                  2020-07-05T16:00:00.000Z
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <p
                  className="MuiTypography-root MuiTypography-body1"
                >
                  Estimated release interval:
                </p>
              </td>
              <td>
                <p
                  className="MuiTypography-root makeStyles-detailText-4 MuiTypography-body1"
                >
                  7 days 0 hours
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <p
                  className="MuiTypography-root MuiTypography-body1"
                >
                  Estimated next release:
                </p>
              </td>
              <td>
                <p
                  className="MuiTypography-root makeStyles-detailText-4 MuiTypography-body1"
                >
                  2020-07-12T16:00:00.000Z
                </p>
              </td>
            </tr>
            <tr>
              <td>
                <p
                  className="MuiTypography-root MuiTypography-body1"
                >
                  Latest chapter:
                </p>
              </td>
              <td>
                <p
                  className="MuiTypography-root makeStyles-detailText-4 MuiTypography-body1"
                >
                  157
                </p>
              </td>
            </tr>
          </tbody>
        </table>
        <nav
          aria-labelledby="nested-list-subheader"
          className="MuiList-root makeStyles-root-11 makeStyles-sourceList-6 MuiList-padding"
        >
          <div
            aria-disabled={false}
            className="MuiButtonBase-root MuiListItem-root makeStyles-mainItem-12 MuiListItem-gutters MuiListItem-button"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="MuiListItemText-root makeStyles-listOpener-14"
            >
              <span
                className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
              >
                Manga sources
              </span>
            </div>
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
            <span
              className="MuiTouchRipple-root"
            />
          </div>
        </nav>
      </div>
    </div>
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-followButton-7 MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        Follow
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <div
      className="MuiPaper-root MuiTableContainer-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <table
        aria-label="simple table"
        className="MuiTable-root"
        role={null}
      >
        <thead
          className="MuiTableHead-root"
          role={null}
        >
          <tr
            className="MuiTableRow-root MuiTableRow-head"
            role={null}
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head makeStyles-titleColumn-9"
              scope="col"
            >
              Title
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Chapter
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head makeStyles-releaseColumn-10"
              scope="col"
            >
              Released
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head"
              scope="col"
            >
              Group
            </th>
          </tr>
        </thead>
        <tbody
          className="MuiTableBody-root"
          role={null}
        >
          <tr
            className="MuiTableRow-root"
            role={null}
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
              role="cell"
              scope="row"
            >
              <a
                className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                href="https://mangaplus.shueisha.co.jp/viewer/1007322"
                onBlur={[Function]}
                onFocus={[Function]}
                style={
                  Object {
                    "textDecoration": "none",
                  }
                }
                target="_blank"
              >
                <span>
                  Z=157: Same Time, Same Place
                </span>
              </a>
            </th>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
            >
              157
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
            >
              2020-07-05T16:00:00.000Z
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
            >
              Shueisha
            </td>
          </tr>
          <tr
            className="MuiTableRow-root"
            role={null}
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
              role="cell"
              scope="row"
            >
              <a
                className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                href="https://mangadex.org/chapter/938629"
                onBlur={[Function]}
                onFocus={[Function]}
                style={
                  Object {
                    "textDecoration": "none",
                  }
                }
                target="_blank"
              >
                <span>
                  Z=156: Two Scientists
                </span>
              </a>
            </th>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
            >
              156
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
            >
              2020-06-26T17:01:59.000Z
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
            >
              MangaPlus
            </td>
          </tr>
          <tr
            className="MuiTableRow-root"
            role={null}
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
              role="cell"
              scope="row"
            >
              <a
                className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                href="https://mangaplus.shueisha.co.jp/viewer/1007024"
                onBlur={[Function]}
                onFocus={[Function]}
                style={
                  Object {
                    "textDecoration": "none",
                  }
                }
                target="_blank"
              >
                <span>
                  Z=156: Two Scientists
                </span>
              </a>
            </th>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
            >
              156
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
            >
              2020-06-26T16:00:00.000Z
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body"
            >
              Shueisha
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
